Bug 1894206 - Speculative connect for HTTPS upgraded page loads has the wrong originAttributes r=acreskey,necko-reviewers,kershaw

When entering www.wikipedia.org in the URL bar, that gets fixed up to
being a http URL, and then a speculativeConnect is dispatched.
nsHttpHandler::SpeculativeConnectInternal will upgrade the URL to https,
but the originAttributes in the network partition key also need to be
HTTPS, otherwise the speculative connection will not be used by the
connection manager.

Differential Revision: https://phabricator.services.mozilla.com/D209213